# bit-string

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: bench-pages.yml  codspeed.yml  gate.yml
benches/: bit_ops.rs  bit_ops_count_ones.rs  bit_ops_leading.rs  bit_ops_leading_trailing.rs  bit_ops_not.rs  bit_ops_shl.rs  bit_ops_shl_assign.rs  bit_ops_shr.rs  bit_ops_trailing.rs  bit_ops_xor.rs  construction_from_bool_iter.rs  construction_from_str.rs  construction_zeros.rs  editing.rs  editing_drain_assign.rs  editing_insert_middle.rs  editing_pop.rs  editing_push.rs  editing_push_bit_string.rs  editing_push_bits.rs  editing_remove_middle.rs  editing_replace_interval.rs  editing_slice.rs  editing_truncate.rs  hash.rs  matching.rs  matching_ends_with.rs  matching_find.rs  matching_matches_at.rs  matching_rfind.rs  matching_starts_with.rs  matching_strip_prefix.rs  ord.rs
benches/dataset/: mod.rs
benches/support/: mod.rs
src/: bit_str.rs  bit_string.rs  consts_for_bits.rs  funcs_for_bits.rs  lib.rs  traits.rs
src/bit_str/: errors.rs  impls_for_access.rs  impls_for_bit_arith.rs  impls_for_eq.rs  impls_for_fmt.rs  impls_for_hash.rs  impls_for_iter.rs  impls_for_matching.rs  impls_for_ord.rs  impls_for_predicates.rs  impls_for_slice.rs  impls_for_to_bit_string.rs  tests_for_to_bit_string.rs
src/bit_str/impls_for_access/: tests_for_get.rs  tests_for_get_chunk.rs
src/bit_str/impls_for_bit_arith/: funcs_for_chunk_eq.rs  impls_for_count_ones.rs  impls_for_leading_zeros.rs  impls_for_trailing_zeros.rs
src/bit_str/impls_for_eq/: tests_for_eq.rs
src/bit_str/impls_for_fmt/: tests_for_fmt.rs
src/bit_str/impls_for_hash/: inner.rs  tests_for_hash.rs
src/bit_str/impls_for_iter/: tests_for_iter.rs
src/bit_str/impls_for_matching/: impls_for_find.rs  impls_for_matches_at.rs  impls_for_strip.rs
src/bit_str/impls_for_ord/: inner.rs  tests_for_ord.rs
src/bit_str/impls_for_slice/: tests_for_slice.rs
src/bit_string/: bits.rs  errors.rs  funcs_for_share.rs  impls_for_access.rs  impls_for_bit_arith.rs  impls_for_bit_ops.rs  impls_for_construction.rs  impls_for_editing.rs  impls_for_fmt.rs  impls_for_hash.rs  impls_for_iter.rs  impls_for_matching.rs  impls_for_ord.rs  impls_for_predicates.rs  tests_for_proptest.rs  traits.rs
src/bit_string/bits/: tests_for_assert_interval_in_bounds.rs  tests_for_bit_at.rs  tests_for_copy.rs  tests_for_last_word_mask.rs  tests_for_low_mask.rs  tests_for_mask_unused.rs  tests_for_read_chunk.rs  tests_for_set_bit.rs  tests_for_shrink_words.rs  tests_for_word_len.rs  tests_for_write_chunk.rs  tests_for_zero_words.rs
src/bit_string/funcs_for_share/: tests_for_assert_interval_in_bounds.rs  tests_for_bit_at.rs  tests_for_copy_bits.rs  tests_for_last_word_mask.rs  tests_for_low_mask.rs  tests_for_mask_unused_bits.rs  tests_for_read_chunk.rs  tests_for_set_bit.rs  tests_for_shrink_words.rs  tests_for_word_len.rs  tests_for_write_chunk.rs  tests_for_zero_words.rs
src/bit_string/impls_for_access/: tests_for_get.rs  tests_for_get_chunk.rs
src/bit_string/impls_for_bit_arith/: impls_for_and.rs  impls_for_count_ones.rs  impls_for_leading_zeros.rs  impls_for_not.rs  impls_for_or.rs  impls_for_rot.rs  impls_for_shl.rs  impls_for_shr.rs  impls_for_xor.rs
src/bit_string/impls_for_bit_ops/: and.rs  funcs_for_binary_core.rs  impls_for_and.rs  impls_for_count_ones.rs  impls_for_not.rs  impls_for_or.rs  impls_for_shl.rs  impls_for_shr.rs  impls_for_xor.rs  tests_for_and_bits.rs  tests_for_count_ones.rs  tests_for_not_bits.rs  (+4 more)
src/funcs_for_bits/: tests_for_low_mask.rs  tests_for_zero_words.rs
src/traits/: bit_ord.rs  bits_arith.rs  bits_edit.rs  bits_eq.rs  bits_find.rs  bits_ord.rs  word_ord.rs  words_arith.rs  words_edit.rs  words_eq.rs  words_find.rs  words_ord.rs  words_scan.rs
tests/: adversarial.rs
tests/adversarial/: tests_for_access.rs  tests_for_bitstr.rs  tests_for_bitwise.rs  tests_for_bugs.rs  tests_for_concat.rs  tests_for_construction.rs  tests_for_count.rs  tests_for_editing.rs  tests_for_fmt.rs  tests_for_iter.rs  tests_for_matching.rs  tests_for_ord_hash.rs  tests_for_predicates.rs  tests_for_replace.rs  tests_for_retain.rs  tests_for_round2.rs  tests_for_shift.rs  tests_for_slice_drain.rs  tests_for_stress.rs
(+237 files in other folders)
