[package]
name = "bit-string"
version = "0.4.4"
edition = "2024"
description = "A compact owned bit string type with editing, matching, and bitwise operations."
readme = "README.md"
repository = "https://github.com/jcfangc/bit-string"
license = "MIT OR Apache-2.0"
keywords = ["bitstring", "bits", "bitset", "sequence"]
categories = ["data-structures", "no-std"]
exclude = ["/benches", "/src/**/tests_for_*", "/tests", ".github/"]


[dependencies]
int-interval = "0.9.6"
witnessed = "0.8.0"

[lib]
doctest = false

[dev-dependencies]
bitvec_simd = "0.20.5"
divan = { package = "codspeed-divan-compat", version = "4.7.0" }
proptest = "1.11.0"


[[bench]]
name = "construction_from_bool_iter"
harness = false

[[bench]]
name = "construction_from_str"
harness = false

[[bench]]
name = "construction_zeros"
harness = false

[[bench]]
name = "bit_ops_xor"
harness = false

[[bench]]
name = "bit_ops_not"
harness = false

[[bench]]
name = "bit_ops_count_ones"
harness = false

[[bench]]
name = "bit_ops_shl"
harness = false

[[bench]]
name = "editing_push"
harness = false

[[bench]]
name = "editing_insert_middle"
harness = false

[[bench]]
name = "editing_remove_middle"
harness = false

[[bench]]
name = "editing_push_bit_string"
harness = false

[[bench]]
name = "editing_replace_interval"
harness = false

[[bench]]
name = "editing_slice"
harness = false

[[bench]]
name = "matching_ends_with"
harness = false

[[bench]]
name = "matching_find"
harness = false

[[bench]]
name = "matching_matches_at"
harness = false

[[bench]]
name = "matching_starts_with"
harness = false

[[bench]]
name = "matching_strip_prefix"
harness = false

[[bench]]
name = "matching_rfind"
harness = false

[[bench]]
name = "editing_truncate"
harness = false

[[bench]]
name = "editing_pop"
harness = false

[[bench]]
name = "bit_ops_shl_assign"
harness = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "ord"
harness = false
